# maigret-runner

./: .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: release.yml
src/runner/: __init__.py  flaresolverr.py  jobs.py  main.py  settings.py  storage.py
templates/: base.html  detail.html  new.html  scans.html
tests/: test_storage.py
