[project]
name = "maigret-runner"
version = "0.1.4"
description = "A small self-hosted web app wrapping Maigret with FlareSolverr-backed fetches and Garage S3 report storage."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "siem2l" }]
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.34",
  "jinja2>=3.1",
  "pydantic>=2.9",
  "pydantic-settings>=2.6",
  "httpx>=0.28",
  "boto3>=1.35",
  "aiosqlite>=0.20",
  "python-multipart>=0.0.12",
  "prometheus-client>=0.21",
  "maigret>=0.5.0",
  # Pulls in xhtml2pdf + reportlab so Maigret's save_pdf_report() works.
  # Listed explicitly (rather than via `maigret[pdf]`) so dep resolution
  # stays predictable across maigret version bumps.
  "xhtml2pdf>=0.2.16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3",
  "pytest-asyncio>=0.24",
  "ruff>=0.7",
  "httpx>=0.28",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/runner"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
